# VID-ED

./: .gitignore  README.md  VID_ED_AI_SUMMARY.md  package.json  pyproject.toml  tsconfig.json
backend/agents/: ai_director.py
core/src/: __init__.py
core/src/commands/: command.py
core/src/events/: event.py
core/src/graph/: knowledge_graph.py
core/src/models/: entities.py
core/src/serialization/: serializer.py
core/tests/: test_core.py
docs/: ARCHITECTURE.md  BUILD_BIBLE.md  MCP_SERVERS_IMPLEMENTATION.md  MILESTONE_1_SETUP.md  MILESTONE_2_SETUP.md  PERFORMANCE_ARCHITECTURE.md  SETUP_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
plugins/servers/audio-mcp/: __init__.py  server.py
plugins/servers/speech-mcp/: __init__.py  server.py
plugins/servers/video-mcp/: __init__.py  server.py
plugins/servers/vision-mcp/: __init__.py  server.py
servers/audio-mcp/: package.json  tsconfig.json  vitest.config.ts
servers/audio-mcp/src/: ffmpeg-impl.ts  index.ts  tools.ts
servers/video-mcp/: README.md  package.json
servers/video-mcp/src/: ffmpeg-impl.ts  index.ts  tools.ts
servers/video-mcp/tests/: video-mcp.test.ts
