[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "editflow-ai"
version = "0.1.0-beta"
description = "A free, local, AI-powered video editor designed to run on mid-range PCs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EditFlow AI Team", email = "team@editflow.ai"}
]
keywords = [
    "video-editing",
    "ai",
    "ffmpeg",
    "whisper",
    "local-ai",
    "tauri"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core video processing
    "ffmpeg-python>=0.2.0",
    
    # Audio analysis
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "audioread>=3.0.0",
    
    # Computer vision
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    
    # AI speech-to-text (Whisper)
    "openai-whisper>=20231117",
    
    # ONNX runtime for optimized inference
    "onnxruntime>=1.16.0",
    "onnx>=1.15.0",
    
    # Backend API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Pydantic for data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP client for external APIs
    "httpx>=0.26.0",
    
    # Progress tracking
    "tqdm>=4.66.0",
    
    # Logging and error handling
    "loguru>=0.7.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
# GPU acceleration (optional, for users with NVIDIA GPUs)
gpu = [
    "onnxruntime-gpu>=1.16.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]

# Development dependencies
dev = [
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

# LLM integration (for AI Director Agent)
llm = [
    "ollama>=0.1.0",
]

# Full installation with all features
all = [
    "editflow-ai[gpu,llm]",
]

[project.urls]
Homepage = "https://github.com/yourusername/editflow-ai"
Documentation = "https://github.com/yourusername/editflow-ai/docs"
Repository = "https://github.com/yourusername/editflow-ai"
Issues = "https://github.com/yourusername/editflow-ai/issues"

[project.scripts]
editflow = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tests*"]
exclude = ["frontend*", "docs*"]

[tool.setuptools.package-data]
backend = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "ffmpeg",
    "librosa",
    "cv2",
    "soundfile",
    "audioread",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
